objects/ESC_EPx_Survey_Reply_Address__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object is used to set reply address when customer replies on case closure mail.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_From_Address__c</fullName>
        <label>From Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>ClosureEmail Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReopenEmailTemplate__c</fullName>
        <label>ReopenEmailTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyTo_Address__c</fullName>
        <label>ReplyTo Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ESC_EPx Survey Reply Address</label>
</CustomObject>